@@ -1,5 +1,10 @@
 2010-12-14  Lee Howard <faxguy@howardsilvan.com>
 
+	* libtiff/tif_read.c: change read_ahead to tmsize_t
+	http://bugzilla.maptools.org/show_bug.cgi?id=2222
+
+2010-12-14  Lee Howard <faxguy@howardsilvan.com>
+
 	* configure.ac, libtiff/Makefile.am: Build tif_win32.c on
 	Windows except on Cygwin
 	http://bugzilla.maptools.org/show_bug.cgi?id=2224
